log
Fri 17 May 2024 10:49:49 PM UTC: 
 tests:  0|5
total_score: 0/70
9ee3fdb
Fri 17 May 2024 10:58:37 PM UTC: 
 sudoku.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:24: error: array subscript -1 is below array bounds of ‘int[9]’ [-Werror=array-bounds]
   57 |       if (n->sudo[fila][columna] == 0){
      |           ~~~~~~~~~~~~~^~~~~~~~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
6181d16
Fri 17 May 2024 11:00:40 PM UTC: 
 sudoku.c | 15 +++------------
 1 file changed, 3 insertions(+), 12 deletions(-)
 tests:  0|5
total_score: 0/70
fa1ebce
Fri 17 May 2024 11:03:05 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
6ba7fb1
Fri 17 May 2024 11:04:14 PM UTC: 
 sudoku.c | 9 ---------
 1 file changed, 9 deletions(-)
 tests:  0|5
total_score: 0/70
52a9e10
Fri 17 May 2024 11:04:27 PM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|5
total_score: 0/70
9b2140d
Fri 17 May 2024 11:06:25 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
e9dcbe0
Fri 17 May 2024 11:08:52 PM UTC: 
 sudoku.c | 12 ------------
 1 file changed, 12 deletions(-)
 tests:  0|5
total_score: 0/70
2792e49
Fri 17 May 2024 11:10:14 PM UTC: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|5
total_score: 0/70
98b76b0
Fri 17 May 2024 11:10:42 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
fd0134b
Fri 17 May 2024 11:15:43 PM UTC: 
 sudoku.c | 28 +++++++---------------------
 1 file changed, 7 insertions(+), 21 deletions(-)
 tests:  0|5
total_score: 0/70
019ead9
Fri 17 May 2024 11:23:41 PM UTC: 
 sudoku.c | 44 ++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 44 insertions(+)
 tests:  3|4
total_score: 20/70
512d67b
Fri 17 May 2024 11:24:16 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 20/70
af865ee
Fri 17 May 2024 11:27:11 PM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:116:13: error: expected identifier or ‘(’ before ‘=’ token
  116 |    for (int = 0; i<9; i++){
      |             ^
sudoku.c:116:18: error: ‘i’ undeclared (first use in this function)
  116 |    for (int = 0; i<9; i++){
      |                  ^
sudoku.c:116:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
fa6d01a
Fri 17 May 2024 11:27:25 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
64d9f84
Fri 17 May 2024 11:27:45 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:122:1: error: control reaches end of non-void function [-Werror=return-type]
  122 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b76e3ec
Fri 17 May 2024 11:27:53 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|3
total_score: 30/70
bed23e0
Fri 17 May 2024 11:31:17 PM UTC: 
 sudoku.c | 22 ++++++++++++++--------
 1 file changed, 14 insertions(+), 8 deletions(-)
 tests:  6|2
total_score: 45/70
6c2f6e9
Fri 17 May 2024 11:33:07 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  7|1
total_score: 55/70
7e2d9de
Fri 17 May 2024 11:39:05 PM UTC: 
 sudoku.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
 tests:  10|0
total_score: 70/70
20e66e9
Fri 17 May 2024 11:39:16 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:165:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  165 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
444ffd0
Fri 17 May 2024 11:39:55 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|0
total_score: 70/70
01d495b
